# TTS_indian_accent

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  du.exe.stackdump  pyproject.toml  requirements-cpu.txt  requirements.txt  run.ps1
config/: voices.yaml
examples/: sample_story.txt
scripts/: bench.py  check_env.py  setup.ps1
src/indian_tts/: __init__.py
src/indian_tts/api/: server.py
src/indian_tts/cli/: main.py
src/indian_tts/core/: __init__.py  audio.py  preprocess.py  presets.py  story_image.py  synthesize.py
src/indian_tts/engine/: __init__.py  base.py  kokoro_backend.py  registry.py
src/indian_tts/web/: __init__.py  app.py
